[gd_scene load_steps=4 format=3 uid="uid://bc1eenrd8jhyj"]

[ext_resource type="Script" path="res://Scenes/gun.gd" id="1_omo6i"]
[ext_resource type="PackedScene" uid="uid://bg56j7pieb818" path="res://Scenes/Components/ammo_component.tscn" id="1_sumqm"]
[ext_resource type="PackedScene" uid="uid://csjvagx4n5kf3" path="res://Scenes/Components/trigger_component.tscn" id="2_qgicd"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_omo6i")

[node name="AmmoComponent" parent="." instance=ExtResource("1_sumqm")]

[node name="TriggerComponent" parent="." instance=ExtResource("2_qgicd")]

[connection signal="reloaded" from="AmmoComponent" to="." method="_on_ammo_component_reloaded"]
[connection signal="pulled" from="TriggerComponent" to="." method="_on_trigger_component_pulled"]
[connection signal="reload" from="TriggerComponent" to="." method="_on_trigger_component_reload"]
